fix overflow problem

--- a/src/layouts/AppLayout/AppLayout.less
+++ b/src/layouts/AppLayout/AppLayout.less
@@ -57,4 +57,18 @@
             }
         }
     }
+    .app-sider-layout {
+        .ant-layout-sider-children {
+            .sider-layout-content {
+                padding: 12px 24px 24px 12px;
+                display: flex;
+                flex-direction: column;
+                .content-header {
+                }
+                .content-body {
+                    overflow: auto;
+                }
+            }
+        }
+    }
 }
