--- a/src/layouts/ContentLayout/ContentLayout.less
+++ b/src/layouts/ContentLayout/ContentLayout.less
@@ -47,7 +47,7 @@
             }
             .sider-layout-content {
                 padding: 12px 24px 24px 12px;
-                overflow: auto;
+                //overflow: auto;
                 .component-content {
                 }
             }
